AnatomyParser.py
# Generated from Anatomy.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AnatomyParser ( Parser ):

    grammarFileName = "Anatomy.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'funcion'", "'evaluar'", "'evaluar_denuevo'", 
                     "'receta'", "'monitoreo'", "'leer('", "'preescripcion('", 
                     "'graficas'", "'barras_pensalas'", "'linea'", "'scatter'", 
                     "'histograma'", "'abrir('", "'cerrar('", "'escribir('", 
                     "'borrar('", "'leerLinea('", "'leerTodo('", "'emitir'", 
                     "'Punto('", "'Cruz('", "'Inversa('", "'Transpuesta('", 
                     "'raiz('", "'entero('", "'.separar()'", "'.agregar('", 
                     "'.indice('", "'.tam()'", "'.borrar('", "'.eliminar()'", 
                     "'.llaves()'", "'.valores()'", "'.actualizar('", "'tag('", 
                     "'arr.'", "'mc('", "'cargarCSV('", "'.guardarCSV('", 
                     "'.fila('", "'.filtrar('", "'.agregarColumna('", "'.eliminarColumna('", 
                     "'.descripcion()'", "'.cabeza('", "'.unir('", "'.columna('", 
                     "'cos('", "'sen('", "'tan('", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'('", "')'", "'['", "']'", 
                     "'{'", "'}'", "':'", "'math.sqrt'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'\\'", "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'//'", 
                     "'@'", "'<<'", "'<'", "'>>'", "'>'", "':='", "'%'", 
                     "'**'", "'=='", "'='", "'!='", "'<='", "'>='", "'<>'", 
                     "'&'", "'|'", "'!'", "','", "';'", "'::'", "'.'", "'->'", 
                     "<INVALID>", "'~'", "'^'", "'+='", "'-='", "'*='", 
                     "'/='", "'//='", "'%='", "'@='", "'&='", "'|='", "'^='", 
                     "'>>='", "'<<='", "'**='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "TYPE", 
                      "BOL", "NEWLINE", "TK_PAR_IZQ", "TK_PAR_DER", "TK_CORCHETE_IZQ", 
                      "TK_CORCHETE_DER", "TK_LLAVE_IZQ", "TK_LLAVE_DER", 
                      "TK_DOS_PUNTOS", "SQRT", "STR", "COMENTARIO", "FLOAT_LITERAL", 
                      "IMAGINARY_LITERAL", "INTEGER_LITERAL", "HEX", "LINE_JOIN", 
                      "EXPONENT", "OPERADOR_SUMA", "OPERADOR_RESTA", "OPERADOR_MULTIPLICACION", 
                      "OPERADOR_DIVISION", "OPERADOR_DIVISION_ENTERA", "OPERADOR_ARROBA", 
                      "OPERADOR_LEFT_SHIFT", "Tk_Menor_Que", "OPERADOR_RIGHT_SHIFT", 
                      "Tk_Mayor_Que", "OPERADOR_WALRUS", "OPERADOR_MODULO", 
                      "OPERADOR_POTENCIA", "OPERADOR_IGUAL", "TK_ASIGN", 
                      "OPERADOR_DIFERENTE", "OPERADOR_MENOR_IGUAL", "OPERADOR_MAYOR_IGUAL", 
                      "OPERADOR_DISTINTO", "OPERADOR_AND", "OPERADOR_OR", 
                      "OPERADOR_Negacion", "COMMA", "SEMICOLON", "OPERADOR_DOUBLE_COLON", 
                      "DOT", "FLECHA", "OPERADOR_BACKTICK", "TK_INVERT", 
                      "TK_XOR", "TK_SUMA_IN_PLACE", "TK_RESTA_IN_PLACE", 
                      "TK_MULT_IN_PLACE", "TK_DIV_IN_PLACE", "TK_DIV_ENTERA_IN_PLACE", 
                      "TK_MODULO_IN_PLACE", "TK_MATRIX_IN_PLACE", "TK_AND_IN_PLACE", 
                      "TK_OR_IN_PLACE", "TK_XOR_IN_PLACE", "TK_RIGHT_IN_PLACE", 
                      "TK_LEFT_IN_PLACE", "TK_EXP_IN_PLACE", "WS" ]

    RULE_program = 0
    RULE_stat = 1
    RULE_assignment = 2
    RULE_functionProc = 3
    RULE_parametros = 4
    RULE_args = 5
    RULE_structureControl = 6
    RULE_ifStatement = 7
    RULE_whileStatement = 8
    RULE_forStatement = 9
    RULE_print = 10
    RULE_graphType = 11
    RULE_graphParams = 12
    RULE_fileOperation = 13
    RULE_reading = 14
    RULE_expr = 15
    RULE_exprL = 16
    RULE_exprA = 17
    RULE_list = 18
    RULE_dict = 19
    RULE_dictItem = 20
    RULE_array = 21
    RULE_dataFrame = 22
    RULE_column = 23
    RULE_filter = 24
    RULE_complex = 25
    RULE_trigFunc = 26

    ruleNames =  [ "program", "stat", "assignment", "functionProc", "parametros", 
                   "args", "structureControl", "ifStatement", "whileStatement", 
                   "forStatement", "print", "graphType", "graphParams", 
                   "fileOperation", "reading", "expr", "exprL", "exprA", 
                   "list", "dict", "dictItem", "array", "dataFrame", "column", 
                   "filter", "complex", "trigFunc" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    ID=51
    TYPE=52
    BOL=53
    NEWLINE=54
    TK_PAR_IZQ=55
    TK_PAR_DER=56
    TK_CORCHETE_IZQ=57
    TK_CORCHETE_DER=58
    TK_LLAVE_IZQ=59
    TK_LLAVE_DER=60
    TK_DOS_PUNTOS=61
    SQRT=62
    STR=63
    COMENTARIO=64
    FLOAT_LITERAL=65
    IMAGINARY_LITERAL=66
    INTEGER_LITERAL=67
    HEX=68
    LINE_JOIN=69
    EXPONENT=70
    OPERADOR_SUMA=71
    OPERADOR_RESTA=72
    OPERADOR_MULTIPLICACION=73
    OPERADOR_DIVISION=74
    OPERADOR_DIVISION_ENTERA=75
    OPERADOR_ARROBA=76
    OPERADOR_LEFT_SHIFT=77
    Tk_Menor_Que=78
    OPERADOR_RIGHT_SHIFT=79
    Tk_Mayor_Que=80
    OPERADOR_WALRUS=81
    OPERADOR_MODULO=82
    OPERADOR_POTENCIA=83
    OPERADOR_IGUAL=84
    TK_ASIGN=85
    OPERADOR_DIFERENTE=86
    OPERADOR_MENOR_IGUAL=87
    OPERADOR_MAYOR_IGUAL=88
    OPERADOR_DISTINTO=89
    OPERADOR_AND=90
    OPERADOR_OR=91
    OPERADOR_Negacion=92
    COMMA=93
    SEMICOLON=94
    OPERADOR_DOUBLE_COLON=95
    DOT=96
    FLECHA=97
    OPERADOR_BACKTICK=98
    TK_INVERT=99
    TK_XOR=100
    TK_SUMA_IN_PLACE=101
    TK_RESTA_IN_PLACE=102
    TK_MULT_IN_PLACE=103
    TK_DIV_IN_PLACE=104
    TK_DIV_ENTERA_IN_PLACE=105
    TK_MODULO_IN_PLACE=106
    TK_MATRIX_IN_PLACE=107
    TK_AND_IN_PLACE=108
    TK_OR_IN_PLACE=109
    TK_XOR_IN_PLACE=110
    TK_RIGHT_IN_PLACE=111
    TK_LEFT_IN_PLACE=112
    TK_EXP_IN_PLACE=113
    WS=114

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AnatomyParser.StatContext)
            else:
                return self.getTypedRuleContext(AnatomyParser.StatContext,i)


        def getRuleIndex(self):
            return AnatomyParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = AnatomyParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 54
                self.stat()
                self.state = 57 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & -8435523061578473034) != 0) or ((((_la - 65)) & ~0x3f) == 0 and ((1 << (_la - 65)) & 201326735) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AnatomyParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ExpressionContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AnatomyParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(AnatomyParser.ExprContext,0)

        def NEWLINE(self):
            return self.getToken(AnatomyParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)


    class BlankContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AnatomyParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEWLINE(self):
            return self.getToken(AnatomyParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlank" ):
                listener.enterBlank(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlank" ):
                listener.exitBlank(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlank" ):
                return visitor.visitBlank(self)
            else:
                return visitor.visitChildren(self)


    class FileOpContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AnatomyParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def fileOperation(self):
            return self.getTypedRuleContext(AnatomyParser.FileOperationContext,0)

        def NEWLINE(self):
            return self.getToken(AnatomyParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFileOp" ):
                listener.enterFileOp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFileOp" ):
                listener.exitFileOp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFileOp" ):
                return visitor.visitFileOp(self)
            else:
                return visitor.visitChildren(self)


    class FunctionContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AnatomyParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionProc(self):
            return self.getTypedRuleContext(AnatomyParser.FunctionProcContext,0)

        def NEWLINE(self):
            return self.getToken(AnatomyParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)


    class StatementContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AnatomyParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignment(self):
            return self.getTypedRuleContext(AnatomyParser.AssignmentContext,0)

        def NEWLINE(self):
            return self.getToken(AnatomyParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)


    class ShowContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AnatomyParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def print_(self):
            return self.getTypedRuleContext(AnatomyParser.PrintContext,0)

        def NEWLINE(self):
            return self.getToken(AnatomyParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShow" ):
                listener.enterShow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShow" ):
                listener.exitShow(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShow" ):
                return visitor.visitShow(self)
            else:
                return visitor.visitChildren(self)


    class ControlContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AnatomyParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def structureControl(self):
            return self.getTypedRuleContext(AnatomyParser.StructureControlContext,0)

        def NEWLINE(self):
            return self.getToken(AnatomyParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterControl" ):
                listener.enterControl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitControl" ):
                listener.exitControl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitControl" ):
                return visitor.visitControl(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = AnatomyParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = AnatomyParser.ExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.expr()
                self.state = 60
                self.match(AnatomyParser.NEWLINE)
                pass

            elif la_ == 2:
                localctx = AnatomyParser.StatementContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 62
                self.assignment()
                self.state = 63
                self.match(AnatomyParser.NEWLINE)
                pass

            elif la_ == 3:
                localctx = AnatomyParser.ShowContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 65
                self.print_()
                self.state = 66
                self.match(AnatomyParser.NEWLINE)
                pass

            elif la_ == 4:
                localctx = AnatomyParser.ControlContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 68
                self.structureControl()
                self.state = 69
                self.match(AnatomyParser.NEWLINE)
                pass

            elif la_ == 5:
                localctx = AnatomyParser.FunctionContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 71
                self.functionProc()
                self.state = 72
                self.match(AnatomyParser.NEWLINE)
                pass

            elif la_ == 6:
                localctx = AnatomyParser.FileOpContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 74
                self.fileOperation()
                self.state = 75
                self.match(AnatomyParser.NEWLINE)
                pass

            elif la_ == 7:
                localctx = AnatomyParser.BlankContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 77
                self.match(AnatomyParser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AnatomyParser.RULE_assignment

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignContext(AssignmentContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AnatomyParser.AssignmentContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(AnatomyParser.ID, 0)
        def TK_ASIGN(self):
            return self.getToken(AnatomyParser.TK_ASIGN, 0)
        def expr(self):
            return self.getTypedRuleContext(AnatomyParser.ExprContext,0)

        def reading(self):
            return self.getTypedRuleContext(AnatomyParser.ReadingContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)



    def assignment(self):

        localctx = AnatomyParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            localctx = AnatomyParser.AssignContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(AnatomyParser.ID)
            self.state = 81
            self.match(AnatomyParser.TK_ASIGN)
            self.state = 84
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19, 20, 21, 22, 23, 24, 25, 35, 36, 37, 38, 48, 49, 50, 51, 53, 55, 57, 59, 63, 65, 66, 67, 68, 72, 91, 92]:
                self.state = 82
                self.expr()
                pass
            elif token in [17, 18]:
                self.state = 83
                self.reading()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionProcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AnatomyParser.RULE_functionProc

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FunctionStatementContext(FunctionProcContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a AnatomyParser.FunctionProcContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(AnatomyParser.ID, 0)
        def TK_PAR_IZQ(self):
            return self.getToken(AnatomyParser.TK_PAR_IZQ, 0)
        def parametros(self):
            return self.getTypedRuleContext(AnatomyParser.ParametrosContext,0)

        def TK_PAR_DER(self):
            return self.getToken(AnatomyParser.TK_PAR_DER, 0)
        def TK_LLAVE_IZQ(self):
            return self.getToken(AnatomyParser.TK_LLAVE_IZQ, 0)
        def TK_LLAVE_DER(self):
            return self.getToken(AnatomyParser.TK_LLAVE_DER, 0)
        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AnatomyParser.StatContext)
            else:
                return self.getTypedRuleContext(AnatomyParser.StatContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionStatement" ):
                listener.enterFunctionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionStatement" ):
                listener.exitFunctionStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionStatement" ):
                return visitor.visitFunctionStatement(self)
            else:
                return visitor.visitChildren(self)



    def functionProc(self):
